--- a/app/config/config.neon
+++ b/app/config/config.neon
@@ -1,9 +1,3 @@
-#
-# SECURITY WARNING: it is CRITICAL that this file & directory are NOT accessible directly via a web browser!
-#
-# If you don't protect this directory from direct web access, anybody will be able to see your passwords.
-# http://nette.org/security-warning
-#
 parameters:
 
 
@@ -24,3 +18,22 @@ nette:
 services:
 	- App\Model\UserManager
 	router: App\RouterFactory::createRouter
+	
+	
+extensions:
+	console: Kdyby\Console\DI\ConsoleExtension
+	events: Kdyby\Events\DI\EventsExtension
+	annotations: Kdyby\Annotations\DI\AnnotationsExtension
+	doctrine: Kdyby\Doctrine\DI\OrmExtension
+	
+	
+doctrine:
+	driver: pdo_mysql
+	user: root
+	password: heslo
+	dbname: dron
+	metadata:
+		App: %appDir%
+				
+				
+# q6h8JByiDO
